--- a/style.css
+++ b/style.css
@@ -16,26 +16,16 @@ section{
 a,p{
     color: hsl(229, 8%, 60%);
 }
+
 .nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.nav ul{
+ul{
     list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
-.nav ul li{
-    margin-right: 40px;  
-}
-.nav ul li a{
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 12px;
-    letter-spacing: 1px;
-}
+
 .nav img{
     margin-left: 25px;
 }
@@ -151,6 +141,7 @@ ul{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    max-width: 100%;
     width: 70%;
     
 }
@@ -198,6 +189,7 @@ ul{
     border-radius: 4px;
     border: none;
     font-size: 14px;
+    max-width: 100%;
     width: 300px;
 }
 .footer{
@@ -278,10 +270,74 @@ ul{
     transform: rotate(180deg);
     color: #FA5757 !important;
 }
+.danger{
+    border: 2px solid hsl(0, 94%, 66%) !important;
+    border-bottom-width: 25px !important;
+}
+.fgroup{
+    display: flex;
+    flex-direction: row;
+    
+    align-items: center !important;
+    margin: auto;
+}
+.inputx{
+    display: flex;
+    flex-direction: column;
+    justify-content: start !important;
+    
+    max-width: 100%;
+    
+}
+.inputx input{
+    max-width: 100%;
+}
+.error-msg,
+.valid-msg{
+    display: none;
+}
+.email-input:focus{
+    outline: none;
+}
+.inputx p{
+    
+    position: absolute;
+    margin-top: 40px !important;
+    font-style: italic;
+    text-align: left !important;
+    color: #fff;
+    font-size: 12px;
+    margin-left: 15px;
+}
+
+.email-inputmove{
+    border: solid hsl(0, 94%, 66%) !important;
+    border-width: 2px 2px 20px 2px !important;
+}
+
+@media only screen and (min-width: 769px){
+    .nav ul{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .nav ul li{
+        margin-right: 40px;  
+    }
+    .nav ul li a{
+        text-transform: uppercase;
+        text-decoration: none;
+        font-size: 12px;
+        letter-spacing: 1px;
+    }
+    .hum{
+        display: none;
+    }
+}
 
 @media only screen and (max-width: 768px){
     html,body{
-        overflow-x: hidden;
+        overflow-x: hidden !important;
     }
 
     body{
@@ -295,8 +351,36 @@ ul{
     .nav img{
         margin-top: 30px;
     }
+    nav{
+        background-color: rgba(37,43,70, 0.1);
+    }
     nav ul{
-        display: none !important;
+        position: absolute;
+        max-width: 100%;
+        
+        min-width: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 250px !important;
+        
+    }
+    nav ul li{
+        font-size: 24px;
+        margin-top: 40px;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .hum{
+        display: block;
+    }
+    .active-nav{
+        display: block;
+    }
+    .inactive-nav{
+        display: none;
     }
     header::before {
         content: "";
@@ -319,7 +403,7 @@ ul{
         text-align: center;
     }
     .main1 p{
-        width: 90%;
+        width: 100%;
     }
     .content{
         text-align: center;
@@ -415,10 +499,16 @@ ul{
         flex-direction: column;
         margin-top: 40px;
     }
-    .fgroup input,
     .fgroup button{
         
-        width: 90%;
+        width: 90% !important;
+    }
+    .inputx{
+        width: 90% !important;
+    }
+    .inputx input{
+        max-width: 100%;
+        min-width: 100%;
     }
     .fgroup button{
         margin-top: 20px;
@@ -464,33 +554,49 @@ ul{
 @media (max-width: 480px){
 
     body{
+        width: 100%;
         overflow-x: hidden;
     }
+    
     header::before {
         content: "";
         position: absolute;
         width: 63%;
-        height: 23%;
+        height: 25%;
         border-radius: 25% 0 0 25%;
         right: 0%;
         top: 36%;
         background-color: hsl(231, 69%, 60%);
         z-index: -1;
       }
+    .ill1{
+        margin-top: -20px;
+    }
     .main1{
+        max-width: 100% !important;
         margin-top: 30px;
     }
     .main1 h1{
         width: 100% !important;
         font-size: 32px;
     }
+    .mian p{
+        width: 100%;
+    }
+    .butts{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
     .cards{
         margin-top: 40px;
        
     }
     .cardx{
+        width: 100%;
         margin-bottom: 30px !important;
-       
+        
+        
     }
     .question{
         margin-top: 80px !important;
