--- a/style.css
+++ b/style.css
@@ -453,11 +453,11 @@ ul{
     header::before {
         content: "";
         position: absolute;
-        width: 60%;
-        height: 40%;
+        width: 62%;
+        height: 36%;
         border-radius: 25% 0 0 25%;
         right: 0%;
-        top: 30%;
+        top: 40%;
         background-color: hsl(231, 69%, 60%);
         z-index: -1;
       }
@@ -634,7 +634,7 @@ ul{
         overflow-x: hidden;
     }
     
-     header::before {
+    header::before {
         content: "";
         position: absolute;
         width: 63%;
@@ -682,6 +682,10 @@ ul{
     }
     .accx{
         margin-top: 20px;
+        padding-bottom: 70px !important;
+    }
+    .folast{
+        margin-left: 30px !important;
     }
 }
 @media (min-width: 425px) and (max-width: 480px){
@@ -717,7 +721,5 @@ ul{
         top: 25%;
         background-color: hsl(231, 69%, 60%);
         z-index: -1;
-      }
-    nav{
-        padding: 40px !important;
+      }   
 }
